# pokemon

./: .flake8  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: settings.py  urls.py
app/app/: settings.py
app/core/managers/: user_manager.py
app/core/models/: user.py
core/: exepctions.py  settings.py  urls.py
core/migrations/: 0001_initial.py  0002_pokemon.py
core/models/: pokemon.py  user.py
core/tests/: test_user_model.py
pokemon/: admin.py  asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
pokemon/adapters/: word_time.py
pokemon/application/interfaces/: user_repository.py
pokemon/application/services/: user_service.py
pokemon/infraestructure/repositories/: user_repository_db.py
pokemon/migrations/: 0001_initial.py  0003_alter_pokemon_abilities.py
pokemon/models/: user.py
pokemon/presentation/views/: user_view.py
pokemon/repositories/: __init__.py
pokemon/serializers/: auth_serializer.py  user_serializer.py
pokemon/tests/: test_pokemon.py
pokemon/transport/: word_time.py
pokemon/utils/: dependency_injention.py
pokemon_2/: serializers.py  urls.py  views.py
pokemon_2/tests/: test_pokemon.py
pokemon_2/transport/: word_time.py
user/: urls.py  views.py
user/serializers/: auth_serializer.py
user/tests/: test_user_api.py
